update: minor changes to UI to implement filters

--- a/pages/admin/components/header.html
+++ b/pages/admin/components/header.html
@@ -16,7 +16,7 @@
    .header {
     background-color: white;
     padding: 10px 16px;
-    border-radius: 8px;
+    /* border-radius: 8px; */
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -50,7 +50,7 @@
   </style>
  </head>
  <body id="header">
-  <div class="header m-3">
+  <div class="header">
    <div class="profile">
     <img src="/assets/admin_prof.png" alt="Profile Picture" />
     <span class="name" id="profileName"></span>
@@ -58,7 +58,7 @@
    <div class="datetime">
     <span class="date" id="currentDate"></span>
     <span class="time" id="currentTime"></span>
-    <i class="bi bi-bell fs-4"></i>
+    <!-- <i class="bi bi-bell fs-4"></i> -->
    </div>
   </div>
   <script>
