--- a/pages/inspector/components/header.html
+++ b/pages/inspector/components/header.html
@@ -16,7 +16,7 @@
    .header {
     background-color: white;
     padding: 10px 16px;
-    border-radius: 8px;
+    /* border-radius: 8px; */
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -50,15 +50,15 @@
   </style>
  </head>
  <body id="header">
-  <div class="header m-3">
+  <div class="header">
    <div class="profile">
     <img src="/assets/admin_prof.png" alt="Profile Picture" />
-    <span class="name">John Doe</span>
+    <span class="name" id="profileName"></span>
    </div>
    <div class="datetime">
     <span class="date" id="currentDate"></span>
     <span class="time" id="currentTime"></span>
-    <i class="bi bi-bell fs-4"></i>
+    <!-- <i class="bi bi-bell fs-4"></i> -->
    </div>
   </div>
   <script>
@@ -72,6 +72,11 @@
    }
    setInterval(updateDateTime, 1000);
    updateDateTime();
+
+   const firstName = localStorage.getItem("firstName") || "";
+   const lastName = localStorage.getItem("lastName") || "";
+   const fullName = firstName + " " + lastName;
+   document.getElementById("profileName").textContent = fullName.trim();
   </script>
  </body>
 </html>
