--- a/pages/inspector/components/inspections.html
+++ b/pages/inspector/components/inspections.html
@@ -1096,7 +1096,7 @@
                             </h5>
                             <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
                         </div>
-                        <div class="modal-body p-4">
+                        <div class="modal-body p-4" style="max-height: 70vh; overflow-y: auto;">
                             <div class="text-center mb-4">
                                 ${
                                  inspectionDetails.business?.image_url
